{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 14,
  "lineage": "fe46b9d2-75c8-c7d7-047e-6673b583b9e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d793dda859ec63f8",
            "arn": "arn:aws:ec2:us-east-1:736483376135:elastic-ip/eipalloc-0d793dda859ec63f8",
            "domain": "vpc",
            "id": "eipalloc-0d793dda859ec63f8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-215-60-119.compute-1.amazonaws.com",
            "public_ip": "44.215.60.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-emock-backend"
            },
            "tags_all": {
              "Name": "nat-eip-emock-backend"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:736483376135:instance/i-02882981c6b3aa135",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02882981c6b3aa135",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05c7dd56de0cc7b90",
            "private_dns": "ip-10-0-1-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.127",
            "public_ip": "107.22.16.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e3448f42923f91fa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad57cbd332133c4a",
            "tags": {
              "Name": "api-emock-backend"
            },
            "tags_all": {
              "Name": "api-emock-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c47cc4ccf379fa2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.key-pair-emock-backend",
            "aws_security_group.security-group-emock-backend",
            "aws_subnet.public-subnet-emock-backend",
            "aws_vpc.vpc-emock-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736483376135:internet-gateway/igw-0eaabfb511b499b26",
            "id": "igw-0eaabfb511b499b26",
            "owner_id": "736483376135",
            "tags": {
              "Name": "igw-emock-backend"
            },
            "tags_all": {
              "Name": "igw-emock-backend"
            },
            "vpc_id": "vpc-02c39c5bad5f22566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-emock-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d793dda859ec63f8",
            "association_id": "eipassoc-0c30eed57188721e4",
            "connectivity_type": "public",
            "id": "nat-042889fc6e06601c9",
            "network_interface_id": "eni-0606d92c26af5417d",
            "private_ip": "10.0.1.117",
            "public_ip": "44.215.60.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ad57cbd332133c4a",
            "tags": {
              "Name": "nat-gw-emock-backend"
            },
            "tags_all": {
              "Name": "nat-gw-emock-backend"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip-emock-backend",
            "aws_subnet.public-subnet-emock-backend",
            "aws_vpc.vpc-emock-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736483376135:route-table/rtb-04e4112ccf7462754",
            "id": "rtb-04e4112ccf7462754",
            "owner_id": "736483376135",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-042889fc6e06601c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-emock-backend"
            },
            "tags_all": {
              "Name": "private-rt-emock-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c39c5bad5f22566"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip-emock-backend",
            "aws_nat_gateway.nat-gw-emock-backend",
            "aws_subnet.public-subnet-emock-backend",
            "aws_vpc.vpc-emock-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736483376135:route-table/rtb-039954b71d09674f3",
            "id": "rtb-039954b71d09674f3",
            "owner_id": "736483376135",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eaabfb511b499b26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-emock-backend"
            },
            "tags_all": {
              "Name": "public-rt-emock-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c39c5bad5f22566"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw-emock-backend",
            "aws_vpc.vpc-emock-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ta-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f76402f26f3df960",
            "route_table_id": "rtb-04e4112ccf7462754",
            "subnet_id": "subnet-07f6c0906cb622a77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip-emock-backend",
            "aws_nat_gateway.nat-gw-emock-backend",
            "aws_route_table.private-rt-emock-backend",
            "aws_subnet.private-subnet-emock-backend",
            "aws_subnet.public-subnet-emock-backend",
            "aws_vpc.vpc-emock-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ta-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019aacb89b15d49e7",
            "route_table_id": "rtb-039954b71d09674f3",
            "subnet_id": "subnet-0ad57cbd332133c4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw-emock-backend",
            "aws_route_table.public-rt-emock-backend",
            "aws_subnet.public-subnet-emock-backend",
            "aws_vpc.vpc-emock-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736483376135:security-group/sg-01c47cc4ccf379fa2",
            "description": "Security group emock backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Regra de saida.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c47cc4ccf379fa2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Regra conexao SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Regra para requisicoes http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250624225522920100000001",
            "name_prefix": "terraform-",
            "owner_id": "736483376135",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group-emock-backend"
            },
            "tags_all": {
              "Name": "security-group-emock-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c39c5bad5f22566"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-emock-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736483376135:subnet/subnet-07f6c0906cb622a77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f6c0906cb622a77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736483376135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-emock-backend"
            },
            "tags_all": {
              "Name": "private-subnet-emock-backend"
            },
            "vpc_id": "vpc-02c39c5bad5f22566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-emock-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736483376135:subnet/subnet-0ad57cbd332133c4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad57cbd332133c4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736483376135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-emock-backend"
            },
            "tags_all": {
              "Name": "public-subnet-emock-backend"
            },
            "vpc_id": "vpc-02c39c5bad5f22566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-emock-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-emock-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736483376135:vpc/vpc-02c39c5bad5f22566",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019f70757c654041c",
            "default_route_table_id": "rtb-03d83f6be1af9aa72",
            "default_security_group_id": "sg-051ff46b608be67ef",
            "dhcp_options_id": "dopt-0142087b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c39c5bad5f22566",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d83f6be1af9aa72",
            "owner_id": "736483376135",
            "tags": {
              "Name": "vpc-emock-backend"
            },
            "tags_all": {
              "Name": "vpc-emock-backend"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}